logs/Slang/generated/hdlconv/hdlconvertor_p504_2.sv.log
name: hdlconvertor_p504_2
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p504_2.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p504_2.sv:1:20: error: use of undeclared identifier 'MyBus'
task exercise_bus (MyBus bus);
                   ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p504_2.sv:4:23: error: language feature not yet supported
res = bus.randomize() with {atype == low;};
                      ^~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p504_2.sv:6:23: error: language feature not yet supported
res = bus.randomize() with {10 <= addr && addr <= 20;};
                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p504_2.sv:8:23: error: language feature not yet supported
res = bus.randomize() with {(data & (data - 1)) == 0;};
                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
